--- a/pages/includes/admin/nav.ejs
+++ b/pages/includes/admin/nav.ejs
@@ -5,7 +5,7 @@
     <p class="text">Wellcome Admin</p>
     <div class="sec">
       <a href="/admin/not"><i class="fa fa-bell-o"></i></a>
-      <a href="" class="btn"
+      <a href="/logout/" class="btn"
         >logout
         <li class="fa fa-sign-out"></li>
       </a>
