--- a/pages/includes/users/nav.ejs
+++ b/pages/includes/users/nav.ejs
@@ -5,7 +5,7 @@
   <p class="text">Wellcome User</p>
   <div class="sec">
     <a href="/users/not"><i class="fa fa-bell-o"></i></a>
-    <a href="#" class="btn"
+    <a href="/logout/" class="btn"
       >logout
       <li class="fa fa-sign-out"></li>
     </a>
